RMagick 1.6.0
    o Added posterize, gaussian_blur_channel methods to Image class (ImageMagick 6.0.0)
    o Added trim and trim! methods to Image class

RMagick 1.5.0
    o Added meaningful implementations of dup and clone to the Image and Draw
      classes. Clarified the documentation.
    o Do not allow changes to frozen Image, ImageList, and Draw objects.
    o Raise TypeError if freeze method sent to Image::Info or ImageList::Montage
      object.
    o Added view method to Image, Image::View class (thanks to Ara T. Howard and
      Charles Comstock on c.l.r for the discussion which prompted me to add this class)
    o Added grayscale_pseudo_class method to Image class (GraphicsMagick 1.1)
    o Added radial_blur, random_threshold_channel methods to Image class
      (ImageMagick 6.0.0)
    o Added quantum_operator method to Image class (GraphicsMagick 1.1, ImageMagick 6.0.0)
    o Added statistics method to Image class (GraphicsMagick 1.1)
    o Support channel_extrema, channel_mean with GraphicsMagick 1.1
    o Added endian attribute to Image class
    o Added composite! method to Image class
    o Deprecated random_channel_threshold method when linked with ImageMagick 6.0.0.

RMagick 1.4.0
    o Revised and updated documentation
    o Implemented enumeration values as instances of an Enum
      class. Based on a description by Paul Brannon in ruby-talk 79041.
    o Added HSLColorspace, HWBColorspace constants (ImageMagick 5.5.7,
      GraphicsMagick 1.0.2)
    o Added CopyCyanCompositeOp, CopyMagentaCompositeOp,
      CopyYellowCompositeOp, CopyBlackCompositeOp constants (ImageMagick 5.5.7,
      GraphicsMagick 1.1)
    o Added ReplaceCompositeOp. CopyCompositeOp constants (ImageMagick 6.0.0)
    o Added color_histogram to Image class. (ImageMagick 6.0.0, GraphicsMagick 1.1)
    o Added define method to Image::Info class (ImageMagick 6.0.0, GraphicsMagick 1.1)
    o Added tint, each_profile, channel_extrema, channel_compare,