@@ -894,7 +894,8 @@ exit
 
       <dd>Blend the fill color with each pixel in the image</dd>
 
-      <dt><a href="image1.html#convolve">convolve</a></dt>
+      <dt><a href="image1.html#convolve">convolve</a>, <a href=
+      "image1.html#convolve_channel">convolve_channel</a></dt>
 
       <dd>Apply a custom convolution kernel to the image</dd>
 
