@@ -8,6 +8,7 @@
 #undef HAVE_BILEVELIMAGECHANNEL
 #undef HAVE_BLACKTHRESHOLDIMAGE
 #undef HAVE_COMPAREIMAGECHANNELS
+#undef HAVE_CONVOLVEIMAGECHANNEL
 #undef HAVE_COPYCYANCOMPOSITEOP
 #undef HAVE_DISPOSETYPE
 #undef HAVE_EVALUATEIMAGECHANNEL
