@@ -1,5 +1,6 @@
 RMagick 1.6.0
-    o Added posterize, gaussian_blur_channel methods to Image class (ImageMagick 6.0.0)
+    o Added posterize, gaussian_blur_channel, convolve_channel methods to Image class
+      (ImageMagick 6.0.0)
     o Added trim and trim! methods to Image class
 
 RMagick 1.5.0
